--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jasmine": "^3.7.7",
     "@types/node": "^15.12.4",
     "@types/sharp": "^0.28.3",
+    "@types/supertest": "^2.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
@@ -31,6 +32,7 @@
     "express": "^4.17.1",
     "jasmine": "^3.7.0",
     "jasmine-spec-reporter": "^7.0.0",
-    "sharp": "^0.28.3"
+    "sharp": "^0.28.3",
+    "supertest": "^6.1.3"
   }
 }
