--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "image processing api",
   "main": "src/index.js",
   "scripts": {
-    "lint": "eslint src/**/*.js",
-    "prettier": "prettier src/**/*.js --write",
+    "lint": "eslint src/**/*.ts",
+    "prettier": "prettier src/**/*.ts --write",
     "build": "npx tsc",
     "jasmine": "jasmine",
     "test": "npm run build && npm run jasmine",
